microservice/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservicegroup
spec:
  selector:
    app: microservicegroup
  ports:
  - protocol: TCP
    port: 5983
    targetPort: 5983
  type: ClusterIP
