microservice/k8s/statefulstate.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: microservice
spec:
  serviceName: "microservice"
  replicas: 2 # Number of replicas
  selector:
    matchLabels:
      app: microservice
  template:
    metadata:
      labels:
        app: microservice
        assigned: null
    spec:
      containers:
      - name: microservice-container
        image: localhost:32000/microservice
        ports:
        - containerPort: 5983


---
apiVersion: v1
kind: Service
metadata:
  name: microservice
spec:
  clusterIP: None # This makes it a headless service
  selector:
    app: microservice
  ports:
  - port: 5983
    targetPort: 5983
