microservice/k8s/ingress.yaml
# microservice.local is in nano /etc/hosts
#Added to access localhost as microservice.local
#127.0.1.1       microservice.local


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservicegroup-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: microservice.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: microservicegroup
            port:
              number: 5983
